--- a/components/PartnershipForm/style/styles.module.css
+++ b/components/PartnershipForm/style/styles.module.css
@@ -63,7 +63,8 @@
     margin-top: 10px;
     padding-left: 18px;
     color: #41438F !important;
-    font-size: 16px;
+    font-size: 15px;
+    line-height: 22px;
     font-weight: 700;
     font-family: AvenirNext;
 }
