--- a/styles/ant.css
+++ b/styles/ant.css
@@ -1,16 +1,18 @@
-
-.ant-menu{
+.ant-menu {
     transition: none !important;
     -webkit-transition: none !important
 }
-.ant-menu-submenu-title{
+
+.ant-menu-submenu-title {
     transition: none !important;
 }
-.ant-menu-submenu-open{
+
+.ant-menu-submenu-open {
     transition: none !important;
 }
-.ant-menu-submenu-open{
-    color:  #363636  !important;
+
+.ant-menu-submenu-open {
+    color: #363636 !important;
     border: none !important;
     transition: none !important;
     text-decoration: none !important;
@@ -18,8 +20,8 @@
     --antd-wave-shadow-color: #363636 !important;
 }
 
- .ant-menu-submenu-title:hover{
-    color:  #363636  !important;
+.ant-menu-submenu-title:hover {
+    color: #363636 !important;
     transition: none !important;
     border: none !important;
     text-decoration: none !important;
@@ -27,167 +29,185 @@
     --antd-wave-shadow-color: #363636 !important;
 }
 
-.ant-menu-item{
-    color:  #363636  !important;
+.ant-menu-item {
+    color: #363636 !important;
     border: none !important;
     text-decoration: none !important;
     transition: none !important;
     border-bottom: none !important;
     --antd-wave-shadow-color: #363636 !important;
-} 
-.ant-menu-item-active{
-    color:  #363636  !important;
+}
+
+.ant-menu-item-active {
+    color: #363636 !important;
     border: none !important;
     text-decoration: none !important;
     border-bottom: none !important;
     --antd-wave-shadow-color: #363636 !important;
     transition: none !important;
-} 
-.ant-menu-submenu-selected{
-    color:  #363636  !important;
+}
+
+.ant-menu-submenu-selected {
+    color: #363636 !important;
     border: none !important;
     text-decoration: none !important;
     border-bottom: none !important;
     transition: none !important;
 }
-::selection{
-    color:  #363636  !important;
+
+::selection {
+    color: #363636 !important;
     background: none !important;
     text-decoration: none !important;
     transition: none !important;
 }
 
-.searchPage
-.ant-input{
+.searchPage .ant-input {
     max-height: 55px !important;
     outline: none !important;
     box-shadow: none !important;
-    border-color:  #BBBBBC !important;
+    border-color: #BBBBBC !important;
     border-radius: 20px 0px 0px 20px !important;
 }
-.ant-input{
+
+.ant-input {
     height: 58px !important;
     outline: none !important;
     box-shadow: none !important;
-    border-color:  #BBBBBC !important;
+    border-color: #BBBBBC !important;
 
     border-radius: 10px 0px 0px 10px !important;
 }
-.ant-select{
+
+.ant-select {
     outline: none !important;
     border: none !important;
 
 }
-.ant-select:hover{
+
+.ant-select:hover {
     outline: none !important;
     border: none !important;
 
 }
 
-.ant-btn-primary{
+.ant-btn-primary {
     height: 58px;
     color: inherit !important;
     background: white !important;
-    border-color:  #BBBBBC !important;
+    border-color: #BBBBBC !important;
     border-left: none !important;
     border-radius: 0px 10px 10px 0px !important;
 }
 
-.searchPage
-.ant-btn-primary{
+.searchPage .ant-btn-primary {
     height: 55px;
     color: inherit !important;
     background: white !important;
-    border-color:  #BBBBBC !important;
+    border-color: #BBBBBC !important;
     border-left: none !important;
     border-radius: 0px 20px 20px 0px !important;
 }
 
-html{
+html {
     --antd-wave-shadow-color: none !important;
     -webkit-tap-highlight-color: none !important;
 }
 
-.ant-tabs-tab-btn{
+.ant-tabs-tab-btn {
     font-size: 17px !important;
     line-height: 23px !important;
     font-family: AvenirNext !important;
-    color:#454545 !important;
+    color: #454545 !important;
 
 }
-.ant-tabs-tab-btn:hover{
-    color:#454545 !important;
+
+.ant-tabs-tab-btn:hover {
+    color: #454545 !important;
 }
-.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+
+.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
     font-size: 17px !important;
     line-height: 23px !important;
     font-family: AvenirNextBold !important;
-    color:#454545 !important;
+    color: #454545 !important;
 }
-.ant-tabs-ink-bar{
+
+.ant-tabs-ink-bar {
     background: #BF6E98 !important
 }
-.ant-tabs-nav{
+
+.ant-tabs-nav {
     width: fit-content;
     border-bottom: 1px solid #E8E8E8;
     color: #E8E8E8;
 }
-.ant-tabs > .ant-tabs-nav .ant-tabs-nav-more, .ant-tabs > div > .ant-tabs-nav .ant-tabs-nav-more{
+
+.ant-tabs>.ant-tabs-nav .ant-tabs-nav-more,
+.ant-tabs>div>.ant-tabs-nav .ant-tabs-nav-more {
     display: none !important;
 }
 
-.ant-select-selector{
+.ant-select-selector {
     height: 44px !important;
     align-items: center !important;
 }
 
-.ant-select-selector ::placeholder{
-    color:#8B8B8B !important;
+.ant-select-selector ::placeholder {
+    color: #8B8B8B !important;
     font-size: 16px !important;
-    line-height: 22px !important;
+    line-height: 43px !important;
     font-family: AvenirNext !important;
 }
-.ant-select-focused{
+
+.ant-select-focused {
     outline: none !important;
 }
-.ant-form-item:hover{
+
+.ant-form-item:hover {
     outline: none !important;
 }
-.ant-form-item:focus{
+
+.ant-form-item:focus {
     outline: none !important;
 }
-.ant-form-item-control-input{
+
+.ant-form-item-control-input {
     align-self: center !important;
 
 }
-.ant-picker-suffix{
+
+.ant-picker-suffix {
     color: #BF6E98 !important;
 }
-.ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
-    color:black !important;
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+    color: black !important;
     font-size: 16px !important;
     font-weight: 800;
     line-height: 22px !important;
     font-family: AvenirNext !important;
 }
+
 /* .ant-select-item-option-content{
     background: white !important;
 } */
-.ant-select-item-option-active:not(.ant-select-item-option-disabled){
+.ant-select-item-option-active:not(.ant-select-item-option-disabled) {
     background-color: white;
 
 }
-.ant-select-item{
+
+.ant-select-item {
     padding: 5px 0px;
     margin: 0px 12px;
     background-color: white;
 }
-@media screen and (max-width: 1100px){
-    .ant-tabs-nav{
+
+@media screen and (max-width: 1100px) {
+    .ant-tabs-nav {
         width: auto;
-    
+
     }
 }
-@media screen and (max-width: 820px){
-  
-}
+
+@media screen and (max-width: 820px) {}
