--- a/styles/typography.css
+++ b/styles/typography.css
@@ -93,7 +93,7 @@
 
 .typography_spartacus_seven {
     font-size: 14px;
-    line-height: 16px;
+    line-height: 19px;
     font-family: AvenirNext;
     color: #888888;
 }
@@ -134,7 +134,7 @@
     line-height: 16px;
     font-family: AvenirNext;
     font-style: italic;
-    color: #6F6F6F;
+    color: #9e9e9e;
 }
 
 .typography_spartacus_eleven {
@@ -253,36 +253,42 @@
     font-family: AvenirNext;
     color: #656565;
 }
+
 .typography_spartacus_twenty_four_bold {
     font-size: 18px;
     line-height: 25px;
     font-family: AvenirNextBold;
     color: #1C1E54
 }
+
 .typography_spartacus_twenty_four_bold_grey {
     font-size: 18px;
     line-height: 25px;
     font-family: AvenirNextBold;
-    color: #373737 
+    color: #373737
 }
+
 .typography_spartacus_twenty_five {
     font-size: 15px !important;
     line-height: 21px !important;
     font-family: AvenirNext !important;
     color: #373737 !important;
 }
+
 .typography_spartacus_twenty_five_bold {
     font-size: 15px;
     line-height: 21px;
     font-family: AvenirNextBold;
     color: #373737;
 }
+
 .typography_spartacus_twenty_five_bold_sm {
     font-size: 12px;
     line-height: 21px;
     font-family: AvenirNextBold;
     color: #373737;
 }
+
 .typography_spartacus_twenty_six_bold {
     color: #302C35;
     font-size: 36px;
